--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
     <ul>
         <li><a href="pages\contacto.html"><h3>Contacto</h3></a></li>
     </ul>
+
+
+    <ul>
+        <li><a href="pages\Galery.html"><h3>Galery</h3></a></li>
+    </ul>
+
 </body>
 </html>
 
