--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,5 +24,8 @@
 <ul>
     <li><a href="../index.html"><h3>Inicio</h3></a></li>
 </ul>
+<ul>
+    <li><a href="pages\Galery.html"><h3>Galery</h3></a></li>
+</ul>
 </body>
 </html>
