--- a/pages/Galery.html
+++ b/pages/Galery.html
@@ -33,6 +33,9 @@
     <ul>
         <li><a href="../index.html"><h3>Inicio</h3></a></li>
     </ul>
+    <ul>
+        <li><a href="pages\contacto.html"><h3>Contacto</h3></a></li>
+    </ul>
 
     
 </body>
