--- a/pages/Galery.html
+++ b/pages/Galery.html
@@ -34,7 +34,7 @@
         <li><a href="../index.html"><h3>Inicio</h3></a></li>
     </ul>
     <ul>
-        <li><a href="pages\contacto.html"><h3>Contacto</h3></a></li>
+        <li><a href="contacto.html"><h3>Contacto</h3></a></li>
     </ul>
 
     
