--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,7 +25,7 @@
     <li><a href="../index.html"><h3>Inicio</h3></a></li>
 </ul>
 <ul>
-    <li><a href="pages\Galery.html"><h3>Galery</h3></a></li>
+    <li><a href="Galery.html"><h3>Galery</h3></a></li>
 </ul>
 </body>
 </html>
