--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica</title>
+    <link rel="stylesheet" type="text/css" href="css\Styles.css" media="screen" />
 </head>
 <body>
     <img src="https://upload.wikimedia.org/wikipedia/commons/4/49/Logo_Q%27hubo_2019.png" height="150" width="400">
-    <h2> Descipción</h2>
+    <h2 class="titulos"> Descipción</h2>
     <h3>Es una página donde se puede encontrar diferentes noticias del mundo. Es como un diario de prensa. No tiene apartados concretos, son Temas diferentes. El formato es de diario.</h3>
 
 
-    <h2>¡Ultima hora! Bus del metrolinea tomado por encapuchados en las afueras de la Universidad Industrial de Santander</h2>
+    <h2 class="titulos">¡Ultima hora! Bus del metrolinea tomado por encapuchados en las afueras de la Universidad Industrial de Santander</h2>
 
     <table>
         <thead>
