--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
+    <link rel="stylesheet" type="text/css" href="css\Styles.css" media="screen" />
 </head>
 <body>
     <img src="https://upload.wikimedia.org/wikipedia/commons/4/49/Logo_Q%27hubo_2019.png" height="150" width="400">
