--- a/pages/Galery.html
+++ b/pages/Galery.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galery</title>
+    <link rel="stylesheet" type="text/css" href="css\Styles.css" media="screen" />
 </head>
 <body>
     <h2>Galería</h2>
